--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
 
         <div class="flex-container items">
           <div class="item">
-            <img src="resources/images/berryblitz.jpg">
+            <img src="resources/images/berryblitz.jpg" alt="berry blitz tea">
             <span>Fall Berry Blitz Tea</span></div>
 
           <div class="item">
-            <img src="resources/images/spiced-rum.jpg">
+            <img src="resources/images/spiced-rum.jpg" alt="spiced rum">
             <span>Spiced Rum Tea</span></div>
 
           <div class="item">
-            <img src="resources/images/donut.jpg">
+            <img src="resources/images/donut.jpg" alt="seasonal donut">
             <span>Seasonal Donuts</span></div>
 
           <div class="item">
-            <img src="resources/images/myrtle-ave.jpg">
+            <img src="resources/images/myrtle-ave.jpg" alt="myrtle ave tea">
             <span>Myrtle Ave Tea</span></div>
 
           <div class="item">
-            <img src="resources/images/bedford-bizarre.jpg">
+            <img src="resources/images/bedford-bizarre.jpg" alt="bedford bizarre tea">
             <span>Bedford Bizarre Tea</span></div>
 
         </div> <!-- "closing div for flex-container items" -->
