Updating HTML and CSS

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div> <!-- "closing div for contact section -->
 
     <div class="footer">
-      <p>copyright The Tea Cozy 2017</p>
+      <h5>copyright The Tea Cozy 2017</h5>
     </div>
 
 
