--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-
     <!-- "Header Section" -->
     <header class="flex-container">
-
       <img src="resources/images/logo.png" alt="logo">
 
       <nav>
@@ -18,21 +16,20 @@
         <span><a href="#">Locations</a></span>
       </nav>
     </header>
-
-    <!-- "Our Mission Section" -->
-  <div class="main">
-    <div id="mission-section" class="flex-container">
-      <div class="content">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-      </div> <!-- "closing div for div content" -->
-    </div> <!-- "closing div for mission-section" -->
-
-    <!-- "Tea Section" -->
-    <div id="tea-section" class="flex-container">
-      <div class="content">
-        <h2>Tea of the Month</h2>
-        <h4>What's Steeping at The Tea Cozy?</h4>
+    <!-- "Main Container" -->
+    <div class="main">
+      <!-- "Mission Section" -->
+      <div id="mission-section" class="flex-container">
+        <div class="content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div> <!-- "closing div for div content" -->
+      </div> <!-- "closing div for mission-section" -->
+      <!-- "Tea Section" -->
+      <div id="tea-section" class="flex-container">
+        <div class="content">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
 
         <div class="flex-container items">
           <div class="item">
@@ -56,50 +53,43 @@
             <span>Bedford Bizarre Tea</span></div>
 
         </div> <!-- "closing div for flex-container items" -->
-      </div> <!-- "closing div for div content" -->
-    </div> <!-- "closing div for tea section" -->
-
-    <!-- "Locations Section" -->
-    <div id="locations-section">
-      <h2>Locations</h2>
-
-      <div class="flex-container locations">
-        <div class="location">
-          <h3>Downtown</h3>
-          <p>384 West 4th St</p>
-          <p>Suite 108</p>
-          <p>Portland, Maine</p>
-        </div> <!-- "closing div for locations" -->
-
-        <div class="location">
-          <h3>East Bayside</h3>
-          <p>3433 Phisherman's Avenue</p>
-          <p>(Northwest Corner)</p>
-          <p>Portland, Maine</p>
-        </div> <!-- "closing div for locations" -->
-
-        <div class="location">
-          <h3>Oakdale</h3>
-          <p>515 Cresent Avenue</p>
-          <p>Second Floor</p>
-          <p>Portland, Maine</p>
-        </div> <!-- "closing div for locations" -->
-      </div> <!-- "closing div for flex-container locations" -->
-    </div> <!-- "closing div for locations section" -->
-
+        </div> <!-- "closing div for div content" -->
+      </div> <!-- "closing div for tea section" -->
+      <!-- "Locations Section" -->
+      <div id="locations-section">
+        <h2>Locations</h2>
+        <div class="flex-container locations">
+          <div class="location">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div> <!-- "closing div for locations" -->
+          <div class="location">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div> <!-- "closing div for locations" -->
+          <div class="location">
+            <h3>Oakdale</h3>
+            <p>515 Cresent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div> <!-- "closing div for locations" -->
+        </div> <!-- "closing div for flex-container locations" -->
+      </div> <!-- "closing div for locations section" -->
+    </div> <!-- "closing div main" -->
+    <!-- "Contact Section" -->
     <div id="contact">
       <h2>The Tea Cozy</h2>
       <h5>contact@theteacozy.com</h5>
       <h5>917-555-8904</h5>
     </div> <!-- "closing div for contact section -->
-
+    <!-- "Footer Section" -->
     <div class="footer">
       <h5>copyright The Tea Cozy 2017</h5>
     </div>
-
-
-
-  </div> <!-- "closing div main" -->
 
   </body>
 </html>
