--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <!-- "Header Section" -->
     <header class="flex-container">
       <img src="resources/images/logo.png" alt="logo">
-
       <nav>
         <span><a href="#">Mission</a></span>
         <span><a href="#">Featured Tea</a></span>
@@ -23,8 +22,8 @@
         <div class="content">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-        </div> <!-- "closing div for div content" -->
-      </div> <!-- "closing div for mission-section" -->
+        </div>
+      </div>
       <!-- "Tea Section" -->
       <div id="tea-section" class="flex-container">
         <div class="content">
@@ -52,9 +51,9 @@
             <img src="resources/images/bedford-bizarre.jpg" alt="bedford bizarre tea">
             <span>Bedford Bizarre Tea</span></div>
 
-        </div> <!-- "closing div for flex-container items" -->
-        </div> <!-- "closing div for div content" -->
-      </div> <!-- "closing div for tea section" -->
+        </div>
+        </div>
+      </div>
       <!-- "Locations Section" -->
       <div id="locations-section">
         <h2>Locations</h2>
@@ -64,28 +63,28 @@
             <p>384 West 4th St</p>
             <p>Suite 108</p>
             <p>Portland, Maine</p>
-          </div> <!-- "closing div for locations" -->
+          </div>
           <div class="location">
             <h3>East Bayside</h3>
             <p>3433 Phisherman's Avenue</p>
             <p>(Northwest Corner)</p>
             <p>Portland, Maine</p>
-          </div> <!-- "closing div for locations" -->
+          </div>
           <div class="location">
             <h3>Oakdale</h3>
             <p>515 Cresent Avenue</p>
             <p>Second Floor</p>
             <p>Portland, Maine</p>
-          </div> <!-- "closing div for locations" -->
-        </div> <!-- "closing div for flex-container locations" -->
-      </div> <!-- "closing div for locations section" -->
-    </div> <!-- "closing div main" -->
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- "Contact Section" -->
     <div id="contact">
       <h2>The Tea Cozy</h2>
       <h5>contact@theteacozy.com</h5>
       <h5>917-555-8904</h5>
-    </div> <!-- "closing div for contact section -->
+    </div>
     <!-- "Footer Section" -->
     <div class="footer">
       <h5>copyright The Tea Cozy 2017</h5>
